# templates

./: .pre-commit-config.yaml  Dockerfile  README.md  cookiecutter.json  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
python-default/: cookiecutter.json
python-default/hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
python-default/{{cookiecutter.__project_slug}}/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
python-default/{{cookiecutter.__project_slug}}/.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
python-default/{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
python-default/{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
reference_config_files/: .pre-commit-config.yaml  pyproject.toml
reference_config_files/.devcontainer/: devcontainer.json  post-create.sh
reference_config_files/hooks/: post_gen_project.py  pre_gen_project.py
src/templates/: __init__.py
