[project]
name = "templates"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "a.wollgarten", email = "awollgarten@posteo.net" }
]
dependencies = []
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
hello = "templates:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/templates"]
