[project]
name = "{{cookiecutter.__project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = [{ name = "{{cookiecutter.author}}", email = "" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
build = ""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pre-commit", "pytest"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins https://beta.ruff.rs/docs/rules/#flake8-builtins-a
    "ANN",   # flake8-annotation https://beta.ruff.rs/docs/rules/#flake8-annotations-ann
    "ARG",   # flake8-unused-arguments https://beta.ruff.rs/docs/rules/#flake8-unused-arguments-arg
    "B",     # flake8-bugbear https://beta.ruff.rs/docs/rules/#flake8-bugbear-b
    "C4",    # flake8-comprehensions https://beta.ruff.rs/docs/rules/#flake8-comprehensions-c4
    "C90",   # mccabe https://beta.ruff.rs/docs/rules/#mccabe-c90
    "COM",   # flake8-commas https://beta.ruff.rs/docs/rules/#flake8-commas-com
    "D",     # pydocstyle https://beta.ruff.rs/docs/rules/#pydocstyle-d
    "E",     # Error https://beta.ruff.rs/docs/rules/#error-e
    "ERA",   # eradicate https://beta.ruff.rs/docs/rules/#eradicate-era
    "F",     # Pyflakes https://beta.ruff.rs/docs/rules/#pyflakes-f
    "G",     # flake8-logging-format https://beta.ruff.rs/docs/rules/#flake8-logging-format-g
    "I",     # isort https://beta.ruff.rs/docs/rules/#isort-i
    "N",     # pep8-naming https://beta.ruff.rs/docs/rules/#pep8-naming-n
    "PD",    # pandas-vet https://beta.ruff.rs/docs/rules/#pandas-vet-pd
    "PIE",   # flake8-pie https://pypi.org/project/flake8-pie/
    "PT",    # flake8-pytest-style https://beta.ruff.rs/docs/rules/#flake8-pytest-style-pt
    "PTH",   # flake8-use-pathlib https://beta.ruff.rs/docs/rules/#flake8-use-pathlib-pth
    "Q",     # flake8-quotes https://beta.ruff.rs/docs/rules/#flake8-quotes-q
    "RET",   # flake8-return https://beta.ruff.rs/docs/rules/#flake8-return-ret
    "RSE",   # flake8-raise https://beta.ruff.rs/docs/rules/#flake8-raise-rse
    "S",     # flake8-bandit https://beta.ruff.rs/docs/rules/#flake8-bandit-s
    "SIM",   # flake8-simplify https://beta.ruff.rs/docs/rules/#flake8-simplify-sim
    "T20",   # flake8-print https://beta.ruff.rs/docs/rules/#flake8-print-t20
    "TRY",   # tryceratops https://beta.ruff.rs/docs/rules/#tryceratops-try
    "UP032", # pyupgrade https://beta.ruff.rs/docs/rules/#pyupgrade-up
    "UP037", # pyupgrade https://beta.ruff.rs/docs/rules/#pyupgrade-up
]

ignore = [
    "B008",
    "C901",
    "S101",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D407",
    "D406",
    "ANN101",
    "ANN102",
    "ANN003",
    "PT001",
    "PT002",
    "PT004",
    "G004",
    "Q002",
    "S603",
    "S607",
]
fixable = ["I", "COM", "RSE", "E", "W", "G", "PT"]
unfixable = ["B"]


[tool.ruff.flake8-quotes]
inline-quotes    = "double"
docstring-quotes = "double"
